@@ -5,6 +5,7 @@ X-editable changelog
 
 Version 1.4.2 wip
 ----------------------------
+[enh #132] combodate options can be defined via data-combodate json string (vitalets)
 [enh] source defined as function now has scope of element and can return string used as url (vitalets)
 [bug #99] select2 with Hierarchical Data (kev360)
 [bug #81] wysihtml5: fix inserting image (vitalets)
